<resources>
    <string name="app_name">Super Heroes Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="name_quiz_description">Display name of Superheroes</string>
    <string name="one_thing_to_know_description">Display the one thing to know about the Superheroes</string>
    <string name="superpwoer_description">Display the superpower of each hero</string>
    <string name="results">%1$d guesses, %2$.01f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="correct_answer">Correct!</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="image_description">Image of the current Superhero</string>
    <string name="default_quiz_type">Names</string>
    <string name="title_activity_settings">Settings</string>
    <string name="placeholder">Text</string>
    <string name="guess_name">Guess the name</string>
    <string name="guess_one_thing">Guess the one thing to know</string>
    <string name="guess_superpower">Guess the superpower</string>
    <string name="quiz_type">Quiz Type</string>
    <string name="current_setting">Current setting: </string>
    <string name="name_quiz_setting">Names</string>
    <string name="one_thing_quiz_setting">One Thing To Know</string>
    <string name="superpower_quiz_setting">Superpowers</string>
    <string name="quiz_type_description">Choose superhero names, superpowers, or one thing about them.</string>
</resources>
