<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/quizType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="settingsWindow"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/quiz_type"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quizTypeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="settingsWindow"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/quiz_type_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizType" />

    <RadioGroup
        android:id="@+id/settings"
        android:layout_width="315dp"
        android:layout_height="386dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="172dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizTypeDescription">

        <RadioButton
            android:id="@+id/names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="chooseSetting"
            android:text="@string/name_quiz_setting"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/oneThing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="chooseSetting"
            android:text="@string/one_thing_quiz_setting"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/superpowers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="chooseSetting"
            android:text="@string/superpower_quiz_setting"
            android:visibility="visible" />
    </RadioGroup>

    <TextView
        android:id="@+id/currentSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="settingsWindow"
        android:text="@string/current_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizTypeDescription" />
</android.support.constraint.ConstraintLayout>